# pitloom

./: .editorconfig  .flake8  .gitignore  .markdownlint.json  AGENTS.md  AGENTS.original.md  CHANGELOG.md  CITATION.cff  DEMONSTRATION.md  DEMONSTRATION_PROVENANCE.md  IMPLEMENTATION_SUMMARY.md  README.md  codemeta.json  loom-0.1.0.spdx3.json  pitloom-0.1.0.spdx3.json  pitloom-0.4.0.spdx3.json  pyproject.toml  sbom.spdx3.json  sentimentdemo-0.0.2.spdx3.json  sentimentdemo-0.2.0.spdx3.json
.github/: copilot-instructions.md
.github/workflows/: build-and-sbom.yml  build.yml  codemeta2cff.yml  hatch-integration.yml  lint.yml  ms-sbom-tool.DISABLED  ms-sbom-tool.yml  pypi-publish.yml  test.yml  tests.yml  type-check.yml  typecheck.yml
design-docs/: architecture-overview.md  metadata-provenance.md  spdx-python-model-integration.md
docs/: huggingface-url.txt  resources.md
docs/design/: architecture-overview.md  format-neutral-representation.md  hatchling-build-hook.md  metadata-provenance.md  metadata-sources.md  mlflow-extractor.md  model-metadata-extraction.md  protobom-evaluation.md  roadmap.md  sbom-enrichment.md  sbom-fragments.md  spdx-python-model-integration.md
docs/implementation/: demo-provenance.md  demo.md  license-pipeline.md  poetry-support.md  setuptools-support.md  summary.md
src/loom/: __about__.py  __init__.py  __main__.py  bom.py  generator.py
src/loom/assemble/: __init__.py
src/loom/assemble/spdx3/: __init__.py  assembler.py  deps.py  fragments.py
src/loom/core/: __init__.py  config.py  creation.py  document.py  models.py  project.py
src/loom/exporters/: __init__.py  spdx3_json.py
src/loom/extract/: __init__.py  ai_model.py  pyproject.py
src/loom/extractors/: __init__.py  ai_model.py  croissant.py  metadata.py  model.py  pyproject.py
src/loom/generators/: __init__.py  dependencies.py  fragments.py  python_project.py  spdx3_assembler.py
src/loom/plugins/: __init__.py  hatch.py
src/pitloom/: __about__.py  __init__.py  __main__.py  bom.py  loom.py
src/pitloom/assemble/: __init__.py
src/pitloom/assemble/spdx3/: __init__.py  ai.py  assembler.py  dataset.py  deps.py  document.py  fragments.py
src/pitloom/core/: ai_metadata.py  config.py  creation.py  dataset_metadata.py  document.py  models.py  project.py
src/pitloom/export/: __init__.py  spdx3_json.py
src/pitloom/extract/: _croissant.py  _croissant_keys.py  _extract_utils.py  _fasttext.py  _gguf.py  _hdf5.py  _huggingface.py  _keras.py  _license.py  _numpy.py  _onnx.py  _pytorch.py  _pytorch_pt2.py  _safetensors.py  ai_model.py  dataset.py  poetry.py  pyproject.py  scanner.py  setuptools.py
src/pitloom/plugins/: __init__.py  hatch.py
tests/: __init__.py  conftest.py  test_ai_model_extractor.py  test_bom.py  test_croissant_extractor.py  test_dataset_metadata.py  test_extract_ai_model.py  test_extract_croissant.py  test_extract_fasttext.py  test_extract_gguf.py  test_extract_hdf5.py  test_extract_huggingface.py  test_extract_keras.py  test_extract_numpy.py  test_extract_onnx.py  test_extract_pytorch.py  test_extract_pytorch_pt2.py  test_extract_safetensors.py  test_fragments.py  test_generator.py  test_hatch_hook.py  test_jcs.py  test_license.py  test_license_detect.py  test_loom.py  test_main_cli.py  test_metadata.py  test_model_extractor.py  test_models.py  test_poetry.py  test_provenance.py  test_setuptools.py  test_spdx3_compliance.py  test_spdx3_dataset.py  test_wheel_integration.py
tests/fixtures/: README.md  huggingface-url.txt  peft-tiny-random-bert.safetensors  tiny-random-bert.onnx  tiny-random-roberta.safetensors  whisper-tiny-random.safetensors
tests/fixtures/aimodels/: README.md
tests/fixtures/aimodels/keras/: example-model.keras
tests/fixtures/aimodels/numpy/: example-model-bundle.npz  example-model-v3.npy
tests/fixtures/aimodels/pytorch/: example-model.pth
tests/fixtures/aimodels/safetensors/: vits-tiny-random.safetensors
tests/fixtures/croissant/: README.md  full.json  minimal.json  prefixed.json
tests/fixtures/fragments/: README.md  ai-model-fragment.spdx3.json  dataset-fragment.spdx3.json  training-run-fragment.spdx3.json
tests/fixtures/gguf/: mmproj-tinygemma3.gguf
tests/fixtures/hdf5/: example-model.h5
tests/fixtures/huggingface-hub/: README.md  huggingface-url.txt
tests/fixtures/keras/: example-model.keras
tests/fixtures/numpy/: model_v2.npy
tests/fixtures/onnx/: resnet-tiny-beans.onnx
tests/fixtures/projects/: README.md
tests/fixtures/projects/sampleproject-hatchling/: README.md
tests/fixtures/projects/sampleproject-setuptools/: setup.cfg  setup.py
tests/fixtures/pytorch/: example-model.pt
tests/fixtures/pytorch_pt2/: example-model.pt2
tests/fixtures/safetensors/: marian-tiny-random.safetensors  phi-tiny-random.safetensors  speech2text-tiny-random.safetensors
tests/fixtures/sampleproject/: README.md  pyproject.toml
tests/fixtures/sampleproject-hatchling/: README.md  pyproject.toml
tests/fixtures/sampleproject-poetry/: README.md
tests/fixtures/sampleproject-setuptools/: README.md  pyproject.toml  setup.cfg
tests/fixtures/sampleproject-setuptools/src/sampleproject/: __init__.py
tests/fixtures/sampleproject-setuptools/src/sampleproject_setuptools/: __init__.py
tests/fixtures/sampleproject/src/sampleproject/: __init__.py
