# SPDX-FileCopyrightText: 2026-present Arthit Suriyawongkul
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.1.0"
description = "Creating SBOM during the build process. Now targeting Python Hatchling support."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "sbom",
    "bom",
    "spdx",
    "software bill of materials",
    "hatchling",
    "supply chain",
]
authors = [{ name = "Arthit Suriyawongkul" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
]
dependencies = [
    "pyproject-metadata>=0.10.0",
    "spdx-python-model>=0.0.4",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
gguf = ["gguf>=0.10.0"]
model = ["onnx>=1.14.1", "safetensors[numpy]>=0.4.0", "gguf>=0.10.0"]
onnx = ["onnx>=1.14.1"]
safetensors = ["safetensors[numpy]>=0.4.0"]

[dependency-groups]
lint = ["flake8>=7.3.0", "pylint>=4.0.5", "ruff>=0.1.0"]
test = ["pytest>=9.0.2"]
typecheck = ["mypy>=1.19.1"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]

[project.scripts]
loom = "loom.__main__:main"

[project.urls]
Documentation = "https://github.com/bact/loom#readme"
Issues = "https://github.com/bact/loom/issues"
Source = "https://github.com/bact/loom"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs/design",
    "/docs/implementation",
    ".editorconfig",
    ".gitignore",
    ".markdownlint.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.mypy]
pretty = true
python_version = "3.10"
mypy_path = ["src"]
show_column_numbers = true
show_error_code_links = true
show_error_context = true
strict = true
strict_equality_for_none = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "spdx_python_model.*"
ignore_missing_imports = true

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.messages_control]
disable = [
    "broad-exception-caught",    # intentional catch-all in CLI and context managers
    "duplicate-code",            # boilerplate setup in test files is expected
    "fixme",                     # TODO comments are tracked intentionally
    "global-statement",          # bom.py uses module-level state by design
    "import-outside-toplevel",   # optional lazy imports pattern
    "missing-function-docstring", # test helper functions don't require docstrings
    "redefined-outer-name",      # pytest fixtures naturally shadow outer names
    "too-many-lines",            # test modules can exceed 1000 lines
    "use-implicit-booleaness-not-comparison", # explicit == [] / == {} in tests is clearer
]

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8
max-attributes = 12
max-branches = 25
max-locals = 40
max-statements = 100

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["loom"]
