# SPDX-FileCopyrightText: 2026-present Arthit Suriyawongkul
# SPDX-License-Identifier: Apache-2.0

[build-system]
# pitloom is listed here so that isolated builds (pip install pitloom) embed the
# SBOM via the Hatchling hook.  For CI and local dev, build with --no-isolation
# so the current checkout is used instead of the PyPI-published version.
requires = ["hatchling>=1.28.0", "pitloom"]
build-backend = "hatchling.build"

[project]
name = "pitloom"
dynamic = ["version"]
description = "Automated transparency, woven from the ground up. SBOM generation for Python & AI projects. Extract metadata from GGUF, ONNX, PyTorch, and Safetensors models with native Hatchling build-hook support."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "sbom",
    "bom",
    "spdx",
    "software bill of materials",
    "hatchling",
    "supply chain",
    "aibom",
    "build",
    "provenance",
]
authors = [{ name = "Arthit Suriyawongkul", email = "suriyawa@tcd.ie" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
]
dependencies = [
    "hatchling>=1.28.0",
    "pyproject-metadata>=0.10.0",
    "rfc8785>=0.1.4",
    "spdx-python-model>=0.0.4",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.optional-dependencies]
aimodel = [
    "fasttext>=0.9.3",
    "fickling>=0.1.10",
    "gguf>=0.10.0",
    "h5py>=3.0.0",
    "numpy>=1.24.0",
    "onnx>=1.14.1",
    "safetensors[numpy]>=0.4.0",
]
fasttext = ["fasttext>=0.9.3"]
gguf = ["gguf>=0.10.0"]
hdf5 = ["h5py>=3.0.0"]
numpy = ["numpy>=1.24.0"]
onnx = ["onnx>=1.14.1"]
pytorch = ["fickling>=0.1.10"]
safetensors = ["safetensors[numpy]>=0.4.0"]

[dependency-groups]
lint = ["flake8>=7.3.0", "pylint>=4.0.5", "ruff>=0.15.7"]
test = ["pytest>=9.0.2"]
typecheck = ["mypy>=1.19.1"]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "typecheck" },
]

[project.entry-points."hatch"]
pitloom = "pitloom.plugins.hatch"

[project.scripts]
loom = "pitloom.__main__:main"    # default command-line entry point
pitloom = "pitloom.__main__:main"

[project.urls]
Documentation = "https://github.com/bact/pitloom#readme"
Issues = "https://github.com/bact/pitloom/issues"
Source = "https://github.com/bact/pitloom"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs/design",
    "/docs/implementation",
    ".editorconfig",
    ".gitignore",
    ".markdownlint.json",
    "AGENTS.md",
    "tests/fixtures/fasttext/*.bin",
    "tests/fixtures/fasttext/*.ftz",
    "tests/fixtures/gguf/*.gguf",
    "tests/fixtures/hdf5/*.h5",
    "tests/fixtures/hdf5/*.hdf5",
    "tests/fixtures/keras/*.keras",
    "tests/fixtures/numpy/*.npy",
    "tests/fixtures/numpy/*.npz",
    "tests/fixtures/onnx/*.onnx",
    "tests/fixtures/pytorch/*.pt",
    "tests/fixtures/pytorch/*.pth",
    "tests/fixtures/pytorch_pt2/*.pt2",
    "tests/fixtures/safetensors/*.safetensors",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pitloom"]

[tool.hatch.build.hooks.pitloom]
sbom-basename = "sbom"

[tool.hatch.version]
path = "src/pitloom/__about__.py"

[tool.pitloom]
pretty = true
# creation-datetime = "2026-04-01T00:00:00"  # Fixed for reproducibility

[tool.mypy]
pretty = true
python_version = "3.10"
mypy_path = ["src"]
show_column_numbers = true
show_error_code_links = true
show_error_context = true
strict = true
strict_equality_for_none = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["fasttext", "fasttext.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "fickling.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "h5py.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "hatchling.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "spdx_python_model.*"

[tool.pylint.main]
init-hook = "import sys; sys.path.insert(0, 'src')" # for IDE's Pylint
source-roots = ["src"]

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-branches = 25
max-locals = 20
max-positional-arguments = 8
max-public-methods = 20
max-statements = 100

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "duplicate-code", # boilerplate in tests is expected
    "fixme",          # TODO comments are tracked intentionally
]

[tool.pylint.typecheck]
# Optional extra dependencies; not always installed when pylint runs
ignored-modules = ["gguf"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pitloom"]
