# SPDX-FileCopyrightText: 2026-present Arthit Suriyawongkul
# SPDX-License-Identifier: CC0-1.0
#
# Metadata for the sampleproject-setuptools fixture.
# Mirrors the metadata in tests/fixtures/sampleproject-hatchling/pyproject.toml so
# both projects can be compared in integration tests.

[metadata]
name = sampleproject_setuptools
version = 0.1.0
description = A minimal sample project for testing the Pitloom build and metadata extraction.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pitloom CI
author_email = ci@loom.example
license = CC0-1.0
keywords = sample test setuptools
url = https://github.com/bact/pitloom
project_urls =
    Source = https://github.com/bact/pitloom
    Tracker = https://github.com/bact/pitloom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.28.0

[options.packages.find]
where = src

[tool:pitloom]
sbom-basename = sbom
creator-name = Pitloom CI
creator-email = ci@loom.example
